fixes #30: Centering image on tablets

--- a/app/styles/media-query/media.home.scss
+++ b/app/styles/media-query/media.home.scss
@@ -28,7 +28,7 @@
     display: block;
     left: 0;
     margin: 0 auto;
-    width: 60%;
+    width: 80%;
   }
 }
 
